# G001

./: .gitattributes  .gitignore  LICENSE  README.md  environment_cross_platform.yml  install.sh  setup.cfg
.github/workflows/: build.yml  collate.yml  collate_combine.yml  combine.yml  integration.yml  name:Collate.yml  process.yml
data/: .gitattributes  swap.csv
data/combined_results/: Wide_Flow_Seq_Data.csv  Wide_Flow_Seq_Data_by_Plate_Type.csv
data/controls/: cottrell.json  dekosky_vh12.feather  human_naive_vrc01_class.feather  kappa_vrc01_aa.feather  lambda_vrc01_aa.feather  oas_5_lc_5_len.feather  oas_vh12.feather  vrc01_class_bnabs_ref_airr.feather
data/flow/: swap.csv
data/groups/: G001treatment.csv  TRX_File.xlsx
data/sequence/: pairing_candidates.feather  personalize.feather
src/g001/: app.py  data.py  utils.py
tests/fixtures/: annotate.feather  find.feather  join.feather  model.feather  mutation.feather  ngs.feather  pair.feather  swap.feather  tag.feather  unblind.feather
tests/integration/: test_collate_integration.py  test_combine_integration.py  test_flow_process_integration.py  test_sequence_analysis_integration.py
typing/Bio/: File.pyi  Seq.pyi  SeqFeature.pyi  SeqRecord.pyi  __init__.pyi  _utils.pyi  bgzf.pyi
typing/pandarallel/: __init__.pyi  core.pyi  progress_bars.pyi  utils.pyi
typings/seaborn/: __init__.pyi  _core.pyi  _decorators.pyi  _docstrings.pyi  _statistics.pyi  _testing.pyi  algorithms.pyi  axisgrid.pyi  categorical.pyi  cm.pyi  conftest.pyi  distributions.pyi  matrix.pyi  miscplot.pyi  rcmod.pyi  regression.pyi  (+3 more)
(+4960 files in other folders)
