[metadata]
name = g001
version = 1.0.0
description = G001 Pipelines.
long_description = file: README.md
long_description_content_type = text/markdown
author = Jordan R. Willis, Troy Sincomb and Jimmy Fulp
author_email = "Jordan R. Willis" <jwillis@scripps.edu>, "Troy Sincomb" <tsincomb@scripps.edu>, "Jimmy Fulp" <wfulp@scharp.org>
license = BSD
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 5 - Release
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering

[options]
packages = find:
python_requires = >=3.9, <=3.10
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    G001=g001.app:main

[options.extras_require]
dev=
    pytest==7.2.0
    pytest-order==1.0.1  # for local runs to gauntee collate is run before combine

[flake8]
defaultsignore = B008

[pylint.MASTER]
extension-pkg-whitelist = pydantic
